styles.css
/* ... */
.mute-button {
  padding: 5px 10px;
  background-color: #FF0000;
  color: #FFFFFF;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-weight: bold;
}


.title-section {
  position: relative;
}


.video-title {
  color: #fff;
  font-size: 2.5rem; 
  margin: 1rem 0 0;
  padding: 1rem;
  border-radius: 5px;
  white-space: nowrap;
  text-align: center;
  font-family: 'Playpen Sans', sans-serif;
  overflow: hidden; 
}

.title-section {
  text-align: center;
}

/* Laurel - Regular font for dare to lead */

.hoverable {
  font-family: 'Gotham', sans-serif;
  display: inline-block;
  transition: transform 0.3s, color 0.3s;
}

.hoverable:hover {
  transform: scale(1.2);
  color: #FF0000;
}

.video-iframe {
  position: relative;
  z-index: 2;
  top: 50%;
  left: 50%;
  width: 100vw;
  height: 37.25vw;
  transform: translate(-50%, -50%);
  border: 2px solid white;
  box-shadow: 0 0 10px 5px white;
}

.video-section {
  position: relative; 
  width: 100%;
  height: 80vh; 
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column; 
  margin-top: 75px;
}


.video-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5); 
  z-index: 10;
  cursor: default;
}

.video-container {
  position: relative;
  height: 315px;
  overflow: hidden;
  max-width: 100%;
  margin: 0 auto;
}


.info-section {
  background-color: #000000; 
  height: 20vh; 
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 20px;
  margin-top: 20px;
  position: relative;
  z-index: 2;
}

.content-wrapper {
  max-width: 800px;
  margin: 0 auto; 
}

.main-heading {
  margin-bottom: 10px;
  font-size: 60px;
  font-weight: bold;
  color: #ffffff;
  font-family: 'Gotham', sans-serif;
}

.sub-heading {
  color: #ffffff;
  font-family: 'Gotham', sans-serif;
  font-size: 30px;
}

.modal {
  display: none;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
}

.modal-content {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
  max-width: 600px;
  background: linear-gradient(-45deg, #ff0000, #000000, #ff0000, #000000);
  background-size: 400% 400%;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  animation: gradientBG 15s ease infinite;
}

@keyframes gradientBG {
  0% {
    background-position: 0 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}


.modal-title {
  margin-top: 10px;
}

.modal-header {
  position: relative; 
  padding: 0; 
  border: none;
}

.modal-header img {
  width: 100%; 
  vertical-align: top; 
}

.modal-title {
  position: absolute; 
  bottom: 0; 
  left: 0;
  width: 100%; 
  background: rgba(0, 0, 0, 0.5); 
  color: #fff; 
  text-align: center; 
  padding: 10px; 
  box-sizing: border-box;
}

.modal-body {
  padding: 20px; 
}


.close-modal {
  background-color: #000000;
  color: #ffffff;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}


/* .cards-section {
  background-color: #000000;
  padding: 20px;
  display: flex;
  justify-content: center;
}

.card-grid {
  width: 70%; 
  display: flex;
  flex-direction: column;
  gap: 20px;
} */

/* .card {
  display: flex; 
  background: linear-gradient(-45deg, #ff000050, #000000, #ff00004b, #000000);
  background-size: 400% 400%;
  color: white;
  border: 2px solid red;
  border-radius: 10px;
  overflow: hidden; 
  height: 200px; 
  position: relative; 
  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
  animation: gradientBG 15s ease infinite;
  margin-bottom: 20px;
} */

/* new card grid */

.cards-section {
  background-color: #000000;
  padding: 20px;
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
}

.card-grid {
  max-width: 70%;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.card {
  width: calc(50% - 10px);
  display: flex; 
  background: #000;
  background-size: 400% 400%;
  color: white;
  border: 2px solid red;
  border-radius: 10px;
  overflow: hidden; 
  height: 225px; 
  position: relative; 
  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
  animation: gradientBG 15s ease infinite;
  margin: 10px 0;
}




.card:hover {
  box-shadow: 0 0 20px #ff0000; 
  transform: scale(1.05);
}

@keyframes gradientBG {
  0% {
    background-position: 0 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}


.card-image {
  flex-basis: 20%; 
  position: relative; 
}

.card-image img {
  width: 100%;
  height: 100%;
  object-fit: cover; 
  transition: transform 1s;
}

.card-image .overlay {
  position: absolute;
  top: 0; 
  left: 0;
  width: 100%; 
  height: 100%;
  background-color: rgba(80, 80, 80, 0.5); 
  z-index: 1;
  transition: top 0.6s;
}

.card-image .card-title {
  position: absolute;
  bottom: 10px;
  left: 10px;
  margin: 0;
  z-index: 2; 
}


.card-content {
  flex-basis: 80%; 
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-between; 
}
/* ... */

